@@ -7,6 +7,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## [Unreleased]
 ### Added
+* Add support to heroku database configuration
 * Add resolver to query list of campaings from store
 * Seed script for database
 * Database adapter for PostgreSQL
